--- a/QLNhaHat/DAO/DAO.csproj
+++ b/QLNhaHat/DAO/DAO.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="CustomerDAO.cs" />
     <Compile Include="DataProvider.cs" />
+    <Compile Include="EmployeeDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeatDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
