--- a/QLNhaHat/QLNhaHat/QLNhaHat.csproj
+++ b/QLNhaHat/QLNhaHat/QLNhaHat.csproj
@@ -67,6 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormBill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBill.Designer.cs">
+      <DependentUpon>FormBill.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDelay.cs">
       <SubType>Form</SubType>
     </Compile>
